# pyspectral

./: .bumpversion.cfg  .gitattributes  .gitchangelog.rc  .gitignore  .landscape.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .stickler.yml  .travis.yml  AUTHORS.md  CHANGELOG.md  CHANGELOG_RSR_DATA.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  RELEASING.md  appveyor.yml  changelog.rst  compare2rsrfiles.py  composite_rsr_plot.py  index.html  params.json  plot_rsr.py  plot_some_band.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_ahi.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
continuous_integration/: environment.yaml
doc/: 37_reflectance.rst  Makefile  api.rst  conf.py  index.rst  installation.rst  platforms_supported.rst  rad_definitions.rst  rayleigh_correction.rst  rsr_formatting.rst  rsr_plotting.rst  rtd_environment.yaml  rtd_requirements.txt  seviri_example.rst  usage.rst
etc/: pyspectral.cfg  pyspectral.cfg_template
pyspectral/: __init__.py  _compat.py  aatsr_reader.py  abi_rsr.py  ahi_reader.py  atm_correction_ir.py  avhrr_rsr.py  bandnames.py  blackbody.py  config.py  convert_avhrr_old2star.py  mersi2_rsr.py  modis_rsr.py  msi_reader.py  near_infrared_reflectance.py  nir_reflectance.py  olci_rsr.py  oli_reader.py  radiance_tb_conversion.py  raw_reader.py  rayleigh.py  rsr_read.py  rsr_reader.py  seviri_rsr.py  slstr_rsr.py  solar.py  split_metop_avhrr_rsrfile.py  testing.py  utils.py  version.py  viirs_rsr.py
rsr_convert_scripts/: README.rst  aatsr_reader.py  abi_rsr.py  agri_rsr.py  ahi_reader.py  ami_reader.py  avhrr1_rsr.py  avhrr_rsr.py  cocts_rsr.py  convert_avhrr_old2star.py  epic_reader.py  fci_rsr.py  ghi_rsr.py  goci2_rsr.py  mersi1_rsr.py  mersi2_rsr.py  mersi3_rsr.py  modis_rsr.py  (+15 more)
(+135 files in other folders)
