[options]
setup_requires =
    setuptools_scm
    setuptools_scm_git_archive


[bdist_rpm]
provides=pyspectral
requires=numpy h5py python-geotiepoints dask PyYAML python-requests python-six python-appdirs
release=1

[bdist_wheel]
universal=1

[flake8]
max-line-length = 120

[coverage:run]
source = ./
omit = rsr_convert_scripts/*py

